# todo-no-tumari

./: Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml
backend/src/: auth.rs  database.rs  interface.rs  main.rs
frontend/: Dockerfile  bun.lockb  package.json
frontend/src/: InputForm.tsx  LoginForm.tsx  SignupForm.tsx
todonoko_back/: Cargo.toml
todonoko_back/src/: auth.rs  interface.rs  main.rs
todonoko_front/: .dockerignore  .gitignore  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
todonoko_front/nginx/: nginx.conf
todonoko_front/public/: index.html
todonoko_front/src/: App.tsx  Header.tsx  LoginForm.tsx  LoginUserProvider.tsx  SignupForm.tsx  TodoList.tsx  index.tsx  interface.ts
