[package]
name = "todonoko_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
chrono = "0.4.31"
chrono-tz = "0.8.4"
uuid = { version = "1.6.1", features = ["v4"] }
